ingress/ingress-rules-blockscout.yaml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: blockscout-ingress-class
  namespace: quorum
spec:
  controller: k8s.io/blockscout-ingress-controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockscout-ingress-name
  namespace: quorum
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: blockscout-ingress-class
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockscout
            port:
              number: 4000
      # - path: /explorer
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: quorum-explorer
      #       port:
      #         number: 80
      # - path: /kibana
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: kibana-kibana
      #       port:
      #         number: 5601
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: monitoring-grafana
      #       port:
      #         number: 3000




# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install blockscout-ingress-helm-name ingress-nginx/ingress-nginx \
#     --namespace quorum \
#     --set controller.ingressClassResource.name="blockscout-ingress-class" \
#     --set controller.ingressClassResource.controllerValue="k8s.io/blockscout-ingress-controller" \
#     --set controller.replicaCount=1 \
#     --set controller.nodeSelector."kubernetes\.io/os"=linux \
#     --set defaultBackend.nodeSelector."kubernetes\.io/os"=linux \
#     --set controller.admissionWebhooks.patch.nodeSelector."kubernetes\.io/os"=linux \
#     --set controller.service.externalTrafficPolicy=Local
